[gd_scene load_steps=2 format=3 uid="uid://bt5ythu3l6p66"]

[ext_resource type="Script" path="res://addons/noded/project_process/task_timeline.gd" id="1_nhqmc"]

[node name="TaskTimeline" type="GraphElement"]
offset_left = 94.0
offset_top = 160.0
offset_right = 294.0
offset_bottom = 180.0
position_offset = Vector2(94, 160)
resizable = true
draggable = false
script = ExtResource("1_nhqmc")

[node name="Button" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
theme_type_variation = &"TimelineButton"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="resize_request" from="." to="." method="_on_resize_request"]
